# mlfbdplugin

./: CMakeLists.txt  README.md  README_RU.md
include/: AddAuthorWindow.h  AddGenreWindow.h  AddSequenceWindow.h  AuthorModelItem.h  AuthorsFrame.h  AuthorsModel.h  AuthorsView.h  BookWidget.h  CMakeLists.txt  CoverFrame.h  DocumentInfoWidget.h  FBDCreation.h  FilesWidget.h  GenreEditModel.h  GenreFrame.h  GenreModelItem.h  GenreView.h  MLFBDPlugin.h  MainWindow.h  PaperBookWidget.h  SaveArchive.h  SequenceFrame.h  SequenceModelItem.h  SequenceView.h  SeriesModel.h  SettingsManager.h  SettingsWindow.h  SourceUrlsModel.h  StyledItemDelegate.h  StyledWindow.h
po/: MLFBDPlugin.po
src/: AddAuthorWindow.cpp  AddGenreWindow.cpp  AddSequenceWindow.cpp  AuthorModelItem.cpp  AuthorsFrame.cpp  AuthorsModel.cpp  AuthorsView.cpp  BookWidget.cpp  CMakeLists.txt  CoverFrame.cpp  DocumentInfoWidget.cpp  FBDCreation.cpp  FilesWidget.cpp  GenreEditModel.cpp  GenreFrame.cpp  GenreModelItem.cpp  GenreView.cpp  MLFBDPlugin.cpp  MainWindow.cpp  PaperBookWidget.cpp  SaveArchive.cpp  SequenceFrame.cpp  SequenceModelItem.cpp  SequenceView.cpp  SeriesModel.cpp  SettingsManager.cpp  SettingsWindow.cpp  SourceUrlsModel.cpp  StyledItemDelegate.cpp  StyledWindow.cpp
styles/: mlfbd_styles.css
translations/: MLFBDPlugin_ru_RU.ts
